--- a/app/views/trees/edit.html.erb
+++ b/app/views/trees/edit.html.erb
@@ -8,6 +8,7 @@
   <%= t.text_field :price %>
 
   <%= t.submit %>
+  <% if current_user == @tree.user%>
    <%= link_to "Delete", tree_path(@tree), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
-
+<%end %>
 <% end %>
