le seed est fait

--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
+      <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
       <h2><%= @tree.titre %></h2>
       <p><%= @tree.taille %></p>
       <p><%= @tree.price %></p>
