--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -9,10 +9,11 @@
           <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
           <div class="card-body">
             <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
-            <p><%= tree.taille %></p>
+            <p><%= tree.taille %>CM</p>
             <div class="d-flex justify-content-start">
               <p><%= tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
-
+              <p><%= tree.geoloc %></p>
+              <p><%= tree.description %></p>
             </div>
           </div>
           <div class="card-footer">
