btn mes résas + home-page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,13 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+.navbar {
+  background-color: rgb(188, 188, 188);
+  border-color: black;
+}
+
+.btn-reservation {
+  color : white;
+}
