--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<div class="btn btn-primary btn-reservation">
+  <%= link_to "My reservations", trees_path, class: "btn-reservation" %> </div>
