--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,31 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<div class="btn btn-primary btn-reservation">
-  <%= link_to "My reservations", trees_path, class: "btn-reservation" %> </div>
+<% count = @trees.length %>
+
+<div class="container">
+  <h1>Home page(<%= count %>)</h1>
+  <div class="row">
+    <% @trees.each do |tree| %>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+          <div class="card-body">
+            <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
+            <p><%= tree.taille %>CM</p>
+            <div class="d-flex justify-content-start">
+              <p><%= tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
+              <p><%= tree.geoloc %></p>
+              <p><%= tree.description %></p>
+            </div>
+          </div>
+          <div class="card-footer">
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+    <% if current_user%>
+  <%= link_to "Add new", new_tree_path, class: "btn btn-primary" %>
+  <%else %>
+  <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
+</div>
