--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,4 +28,7 @@
   <%else %>
   <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
   <% end %>
+    <%= link_to "My trees", trees_path, class: "btn btn-primary" %>
+    <%= link_to "My bookings", bookings_path, class: "btn btn-primary" %>
+
 </div>
