--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,7 @@
               <p><%= tree.description %></p>
             </div>
           </div>
+          <%= link_to "Reserve", new_tree_booking_path(tree), class: "btn btn-primary" %>
           <div class="card-footer">
           </div>
         </div>
