--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,10 +1,11 @@
-<h1>New reservation</h1>
-<%= form_with model: @booking do |t| %>
-  <%= t.label :titre %>
-  <%= t.text_field :titre %>
-  <%= t.label :taille %>
-  <%= t.text_field :taille %>
-  <%= t.label :price %>
-  <%= t.text_field :price %>
+<h1>New Reservation</h1>
+
+
+<%= form_with model: [@tree, @booking] do |t| %>
+  <p><%= @tree.price %></p>
+  <%= t.label :start_date %>
+  <%= t.date_field :start_date %>
+  <%= t.label :end_date %>
+  <%= t.date_field :end_date %>
   <%= t.submit %>
 <% end %>
