--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,11 @@
               <p><%= tree.description %></p>
             </div>
           </div>
+          <% if current_user%>
           <%= link_to "Reserve", new_tree_booking_path(tree), class: "btn btn-primary" %>
+            <%else %>
+            <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
+         <% end %>
           <div class="card-footer">
           </div>
         </div>
@@ -29,7 +33,14 @@
   <%else %>
   <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
   <% end %>
+   <% if current_user%>
     <%= link_to "My trees", trees_path, class: "btn btn-primary" %>
+    <%else %>
+  <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
+   <% if current_user%>
     <%= link_to "My bookings", bookings_path, class: "btn btn-primary" %>
-
+<%else %>
+  <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
 </div>
