--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
             </div>
           </div>
             <% if current_user != tree.user%>
-          <%= link_to "Reserve", new_tree_booking_path(tree), class: "btn btn-primary" %>
+          <%= link_to "Reserve", current_user.nil? ? new_user_session_path : new_tree_booking_path(tree), class: "btn btn-primary" %>
           <% end %>
           <div class="card-footer">
           </div>
@@ -31,7 +31,15 @@
   <%else %>
   <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
   <% end %>
+  <% if current_user%>
     <%= link_to "My trees", trees_path, class: "btn btn-primary" %>
+    <%else %>
+  <%= link_to "My trees", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
+      <% if current_user%>
     <%= link_to "My bookings", bookings_path, class: "btn btn-primary" %>
+    <%else %>
+  <%= link_to "My bookings", new_user_session_path, class: "btn btn-primary" %>
+  <% end %>
 
 </div>
