--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,13 +10,4 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-
-
-.navbar {
-  background-color: rgb(188, 188, 188);
-  border-color: black;
-}
-
-.btn-reservation {
-  color : white;
-}
+@import "home_page";
