--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,5 +8,35 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 47px;
+}
+
+.navbar-brand h1 {
+  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.navbar {
+  background-color: rgb(245, 245, 245);
+  border-color: rgb(0, 0, 0);
+  height: 8vh;
+  border-bottom-width: 3px;
+}
+
+.nav-link {
+  background-color: white;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  background-color: #71EFA3;
+  color: black;
+  transition: 1.5s ease-out;
+}
+
+.nav-item {
+  padding-left: 5px;
 }
