--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon border-bottom">
   <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+    <%= link_to root_path, class: "d-flex justify-content-center navbar-brand" do %>
+      <%= image_tag "sapin.png" %>
+      <h1>Air-Bn-Sapin</h1>
     <% end %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,27 +11,53 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
+            <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
+
+            <% if current_user%>
+            <li class="nav-item active">
+              <%= link_to "Add new tree", new_tree_path, class: "nav-link" %>
+              </li>
+            <%else %>
+            <li class="nav-item active">
+              <%= link_to "Add new tree", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            <% if current_user%>
+            <li class="nav-item active">
+              <%= link_to "My trees", trees_path, class: "nav-link" %>
+              </li>
+            <%else %>
+            <li class="nav-item active">
+              <%= link_to "My trees", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            <% if current_user%>
+            <li class="nav-item active">
+              <%= link_to "My bookings", bookings_path, class: "nav-link" %>
+              </li>
+            <%else %>
+            <li class="nav-item active">
+              <%= link_to "My bookings", new_user_session_path, class: "nav-link" %>
+              </li>
+            <% end %>
+
+
+        <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
           </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <%= current_user.email %>
+            <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
   </div>
+</div>
 </div>
