les notifications marche

--- a/app/views/trees/new.html.erb
+++ b/app/views/trees/new.html.erb
@@ -6,5 +6,9 @@
   <%= t.text_field :taille %>
   <%= t.label :price %>
   <%= t.text_field :price %>
+  <%= t.label :geoloc %>
+  <%= t.text_field :geoloc %>
+  <%= t.label :description %>
+  <%= t.text_field :description %>
   <%= t.submit %>
 <% end %>
