--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -1,3 +1,11 @@
 .big-box-trees-home-page {
   margin-top: 50px;
 }
+.test{
+  position: absolute;
+  top: 8vh;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-color: bisque;
+}
