--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,22 @@
 <% count = @trees.length %>
-
+<div class = "test">
+<% if current_user %>
+<% total_bookings = current_user.trees.map{ |tree| tree.bookings}.flatten.count %>
+<p>Vous avez eu <%= total_bookings %> réservations</p>
+<% end %>
+</div>
 <div class="container big-box-trees-home-page">
   <h1>Home page(<%= count %>)</h1>
   <div class="row">
     <% @trees.each do |tree| %>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
+        <% if tree.image.nil? %>
+        <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
           <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+          <% else %>
+          <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+          <% end %>
           <div class="card-body">
             <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
             <p><%= tree.taille %>CM</p>
