--- a/app/views/trees/edit.html.erb
+++ b/app/views/trees/edit.html.erb
@@ -6,6 +6,10 @@
   <%= t.text_field :taille %>
   <%= t.label :price %>
   <%= t.text_field :price %>
+   <%= t.label :geoloc %>
+  <%= t.text_field :geoloc %>
+  <%= t.label :description %>
+  <%= t.text_field :description %>
   <%= t.submit %>
   <% if current_user == @tree.user%>
     <%= link_to "Delete", tree_path(@tree), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
