--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -7,12 +7,13 @@
 }
 
 .map-home-page {
-  height: 100%;
+  height: 100vh;
   width: 500px;
   background-color: grey;
   position: sticky;
   top: 0;
   z-index: 100;
+  background-image: contain;
   background-image: url("https://i.ebayimg.com/images/g/swQAAOSwdQRgh6DA/s-l1200.webp");
 }
 
@@ -30,6 +31,7 @@
 
 .card a {
   text-decoration: none;
+}
 
 .test{
   position: absolute;
