--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -2,7 +2,7 @@
   margin-top: 50px;
 }
 
-.card-footer {
+.card-home-footer {
   display: none;
 }
 
@@ -36,8 +36,8 @@
 .test{
   position: absolute;
   top: 8vh;
-  right: 0;
-  width: 50px;
-  height: 50px;
+  left: 0;
+  width: 200px;
+  height: 30px;
   background-color: bisque;
 }
