--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -6,8 +6,12 @@
     <% @trees.each do |tree| %>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
-          <div class="card-body">
+<% if tree.image.nil? %>
+            <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
+              <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+              <% else %>
+              <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+              <% end %>          <div class="card-body">
             <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
             <p><%= tree.taille %>CM</p>
             <div class="d-flex justify-content-start">
