--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "home_page";
+@import "components/home_page";
+@import "components/show_trees";
