--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,36 +7,69 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 47px;
+.navbar-title-img {
+  height: 60px;
+  margin-top: 10px;
 }
 
-.navbar-brand h1 {
+.navbar-title {
   padding-left: 10px;
-  padding-top: 10px;
+  padding-top: 20px;
+}
+
+.navbar-title h1 {
+  transition: 0.8s ease;
+  padding-top: 5px;
   font-size: 32px;
   font-weight: bold;
 }
 
+.navbar-title:hover h1 {
+  color: #4ee68b;
+  transition: 0.8s ease;
+}
+
+.navbar-title .bullet-point-title {
+  padding-bottom: 10px;
+  font-size: 35px;
+  color: #4ee68b;
+}
+
 .navbar {
+  transition: 0.8s ease;
   background-color: rgb(245, 245, 245);
   border-color: rgb(0, 0, 0);
   height: 8vh;
   border-bottom-width: 3px;
 }
 
+.navbar:hover {
+  height: 11vh;
+  transition: 0.8s ease;
+}
+
 .nav-link {
+  transition: 0.8s ease;
   background-color: white;
   border-radius: 15px;
   font-weight: bold;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 .nav-link:hover {
+  padding-left: 30px !important;
+  padding-right: 30px !important;
   background-color: #71EFA3;
   color: black;
-  transition: 1.5s ease-out;
+  box-shadow: rgb(177, 189, 201) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.952) -3px -3px 6px 1px inset;
+  transition: 0.8s ease;
 }
 
 .nav-item {
   padding-left: 5px;
+}
+
+
+.search-navbar input {
+  width: 50px;
 }
