--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container big-box-show-trees">
   <div class="card">
     <div class="card-body">
 <% if @tree.image.nil? %>
