--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -12,7 +12,7 @@
               <p><%= booking.tree.description %></p>
               <p><%= booking.start_date %></p>
               <p><%= booking.end_date %></p>
-
+                <%= link_to "Annuler reservation", booking_path(booking), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
             </div>
           </div>
           <div class="card-footer">
