--- a/app/views/trees/new.html.erb
+++ b/app/views/trees/new.html.erb
@@ -6,8 +6,8 @@
   <%= t.text_field :taille %>
   <%= t.label :price %>
   <%= t.text_field :price %>
-  <%= t.label :geoloc %>
-  <%= t.text_field :geoloc %>
+  <%= t.label :address %>
+  <%= t.text_field :address %>
   <%= t.label :description %>
   <%= t.text_field :description %>
   <%= t.submit %>
