--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -3,6 +3,10 @@
 <div class="container">
   <h1>My trees(<%= count %>)</h1>
   <div class="row">
+  <div style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
     <% @trees.each do |tree| %>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
