--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,42 +1,46 @@
-
 <div class="d-flex justify-content-between body-home">
   <div class="container big-box-trees-home-page">
     <% count = @trees.length %>
-    <h1><strong>Home page</strong> (<%= count %> <%= "tree".pluralize(count) %>)</h1>
-    <div class="box-trees-home-page">
-      <div class="row">
-        <% @trees.each do |tree| %>
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
+    <h1 class="d-flex my-trees-title"><strong> Home page</strong>
+      <div class="d-flex count">
+        <p class="first-p">(</p>
+        <div class="count">
+          <%= count %>
+          <%= "tree".pluralize(count)%>
+        </div>
+        <p>)</p>
+      </div>
+    </h1>
+    <div class="row">
+      <% @trees.each do |tree| %>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
             <% if tree.image.nil? %>
-            <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
+              <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
               <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
-              <% else %>
+            <% else %>
               <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
-              <% end %>
-              <div class="card-body">
-                <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
-                <div class="d-flex flex-column justify-content-start">
-                  <p><%= tree.geoloc %></p>
-                  <p><%= tree.description %></p>
-                  <div class="d-flex justify-content-between">
+            <% end %>
+            <div class="card-body">
+              <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
+              <div class="d-flex flex-column justify-content-start">
+                <p><%= tree.geoloc %></p>
+                <p><%= tree.description %></p>
+                <div class="d-flex justify-content-between">
                   <p><%= tree.taille %> cm</p>
                   <p><%= tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
-                  </div>
                 </div>
               </div>
-              <% if current_user != tree.user%>
-                <%= link_to "Reserve", current_user.nil? ? new_user_session_path : new_tree_booking_path(tree), class: "btn-reserve-home mx-auto" %>
-              <% end %>
-              <div class="card-home-footer">
-              </div>
+            </div>
+            <% if current_user != tree.user%>
+              <%= link_to "Reserve", current_user.nil? ? new_user_session_path : new_tree_booking_path(tree), class: "btn-reserve-home mx-auto" %>
+            <% end %>
+            <div class="card-home-footer">
             </div>
           </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class="map-home-page">
-    dgerge
   </div>
-</div>
