--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -1,17 +1,21 @@
 <% count = @trees.length %>
-
-<div class="container">
-  <h1>My <%= "tree".pluralize(count) %>(<%= count %>)</h1>
-  <div class="row">
+<div class="container big-box-my-trees">
+  <h1 class="d-flex my-trees-title"><strong> My <%= "tree".pluralize(count)%></strong>
+    <p class="first-p my-auto">(</p>
+    <div class="count my-auto"><%= count %></div>
+    <p class="my-auto">)</p>
+  </h1>
+  <div class="row box-trees">
     <% @trees.each do |tree| %>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-<% if tree.image.nil? %>
+          <% if tree.image.nil? %>
             <% tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
-              <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
-              <% else %>
-              <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
-              <% end %>          <div class="card-body">
+            <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+          <% else %>
+            <img src="<%= tree.image %>" class="card-img-top" alt="tree Image">
+          <% end %>
+          <div class="card-body">
             <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
             <p><%= tree.taille %>CM</p>
             <div class="d-flex justify-content-start">
@@ -26,10 +30,4 @@
       </div>
     <% end %>
   </div>
-
-    <% if current_user%>
-  <%= link_to "Add new", new_tree_path, class: "btn btn-primary" %>
-  <%else %>
-  <%= link_to "Add new", new_user_session_path, class: "btn btn-primary" %>
-  <% end %>
 </div>
