--- a/app/views/trees/index.html.erb
+++ b/app/views/trees/index.html.erb
@@ -22,7 +22,7 @@
             <p><%= tree.taille %>CM</p>
             <div class="d-flex justify-content-start">
               <p><%= tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
-              <p><%= tree.geoloc %></p>
+              <p><%= tree.address %></p>
               <p><%= tree.description %></p>
             </div>
           </div>
