--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -82,10 +82,23 @@
   width: 125px;
   border-radius: 15px;
   padding: 5px 0px 5px 10px;
+  border: none;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 .btn-submit-search-navbar {
+  transition: 0.8s ease;
   padding-right: 5px !important;
+  background-color: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: none;
+
+
+}
+
+.btn-submit-search-navbar:hover {
+background-color: #71EFA3;
+box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .dropdown-menu {
