--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,7 +23,7 @@
 
 .navbar-title h1 {
   transition: 0.8s ease;
-  padding-top: 5px;
+  padding-top: 3px;
   font-size: 32px;
   font-weight: bold;
 }
@@ -37,7 +37,7 @@
 }
 
 .navbar-title .bullet-point-title {
-  padding-bottom: 10px;
+  padding-bottom: 12px;
   font-size: 35px;
   color: #4ee68b;
 }
@@ -58,6 +58,7 @@
 
 .nav-link {
   transition: 0.8s ease;
+  font-family: roboto;
   background-color: white;
   border-radius: 15px;
   font-weight: bold;
@@ -77,14 +78,29 @@
   padding-left: 5px;
 }
 
+.search-navbar {
+  margin-top: 2px;
+}
 
 .search-navbar input {
+  transition: 0.8s ease;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  font-family: roboto;
+  border: none;
+  font-weight: bold;
   width: 125px;
   border-radius: 15px;
-  padding: 5px 0px 5px 10px;
+  padding: 8px 0px 8px 5px !important;
+}
+
+.search-navbar input:hover {
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  transition: 0.8s ease;
 }
 
 .btn-submit-search-navbar {
+  font-family: roboto;
+  font-weight: bold;
   padding-right: 5px !important;
 }
 
