--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "components/index_trees";
+@import "components/show_trees";
+@import "components/edit_trees";
+@import "components/my_bookings";
+@import "components/new_tree";
