--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,32 +1,38 @@
 <% count = @bookings.length %>
 <div class="container big-box-my-trees">
-  <div class="box-trees">
-    <h1 class="d-flex my-trees-title"><strong> My <%= "booking".pluralize(count)%></strong>
-      <p class="first-p my-auto">(</p>
-      <div class="count my-auto"><%= count %></div>
-      <p class="my-auto">)</p>
-    </h1>
-    <div class="row">
-      <% @bookings.each do |booking| %>
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <img src="<%= booking.tree.image %>" class="card-img-top" alt="tree Image">
-            <div class="card-body">
-              <p><%= booking.tree.taille %>CM</p>
-              <div class="d-flex justify-content-start">
+  <h1 class="d-flex my-trees-title"><strong> My <%= "booking".pluralize(count)%></strong>
+    <p class="first-p my-auto">(</p>
+    <div class="count my-auto"><%= count %></div>
+    <p class="my-auto">)</p>
+  </h1>
+  <div class="row box-trees">
+    <% @bookings.each do |booking| %>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="<%= booking.tree.image %>" class="card-img-top" alt="tree Image">
+          <div class="card-body">
+            <div class="d-flex flex-column justify-content-start">
+              <p><%= booking.tree.address %></p>
+              <p><%= booking.tree.description %></p>
+              <div class="d-flex justify-content-between">
+                <p><%= booking.tree.taille %> cm</p>
                 <p><%= booking.tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
-                <p><%= booking.tree.address %></p>
-                <p><%= booking.tree.description %></p>
-                <p><%= booking.start_date %></p>
-                <p><%= booking.end_date %></p>
-                <%= link_to "Annuler reservation", booking_path(booking), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
               </div>
             </div>
-            <div class="card-footer">
-            </div>
           </div>
+          <div class="card-footer">
+            <p><%= booking.start_date %></p>
+            <p><%= booking.end_date %></p>
+          </div>
+          <%= link_to "Cancel reservation", booking_path(booking), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn-cansel-reservation mx-auto" %>
         </div>
-      <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
