--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -48,12 +48,14 @@
 }
 
 .btn-reserve-home {
+  margin-top: 10px;
+  font-family: roboto;
+  font-weight: bold;
   transition: 0.8s ease;
-  background-color: rgba(118, 184, 242, 0.764);
+  background-color: white;
   box-shadow: 0 1px 2px rgba(0,0,0,0.5);
   text-align: center;
-  color: black;
-  font-size: 16px;
+  color: rgba(0,0,0,.5);
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px;
@@ -62,13 +64,13 @@
 }
 
 .btn-reserve-home:hover {
+  margin-top: 0;
   margin-bottom: 0;
   width: 100%;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   background-color: #71EFA3;
   color: black;
-  font-size: 18px;
   font-weight: bold;
   box-shadow: rgba(0, 0, 0, 0.5);
   transition: 0.8s ease;
@@ -81,4 +83,8 @@
 .my-trees-title p, .count {
   padding-top: 6px;
   font-size: 24px;
+}
+
+.fa-euro-sign {
+  font-size: 14px;
 }
