--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="card">
     <div class="card-footer">
-      <%= link_to "Back to list", root_path, class: "btn btn-secondary btn-sm" %>
+      <%= link_to "Back to list", booking_path, class: "btn btn-secondary btn-sm" %>
             <p>ça a été booké par: <%= @booking.user.email %></p>
             <p><%= @booking.start_date %></p>
             <p><%= @booking.end_date %></p>
