--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,9 +26,9 @@
               <div class="d-flex flex-column justify-content-start">
                 <p><%= tree.address %></p>
                 <p><%= tree.description %></p>
-                <div class="d-flex justify-content-between">
                   <p><%= tree.taille %> cm</p>
-                  <p><%= tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
+                <div class="d-flex justify-content-end">
+                  <p><%= tree.price %> <i class="fa-solid fa-euro-sign"> </i> </p> <p class="price-per-day"> /day</p>
                 </div>
               </div>
             </div>
