--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,13 +20,13 @@
           <label for="end_date" name="end_date"></label>
           <input type="date" id="end_date" name="end_date" placeholder="Date" required data-action="click->toggle#search">
           <label for="min_size" name="min_size"></label>
-          <input type="search" id="min_size" name="min_size" placeholder="Mini size (cm)", class="d-none", data-toggle-target="togglableElement">
+          <input type="search" id="min_size" name="min_size" placeholder="Min size (cm)", class="d-none", data-toggle-target="togglableElement">
           <label for="max_size" name="max_size"></label>
           <input type="search" id="max_size" name="max_size" placeholder="Max size (cm)", class="d-none", data-toggle-target="togglableElement">
           <label for="min_price"></label>
-          <input type="text" id="min_price" name="min_price" placeholder="Mini price (€)", class="d-none", data-toggle-target="togglableElement">
+          <input type="text" id="min_price" name="min_price" placeholder="Min price (€)", class="d-none", data-toggle-target="togglableElement">
           <label for="max_price"></label>
-          <input type="text" id="max_price" name="max_price" placeholder="Maxi price (€)", class="d-none", data-toggle-target="togglableElement">
+          <input type="text" id="max_price" name="max_price" placeholder="Max price (€)", class="d-none", data-toggle-target="togglableElement">
           <input type="submit", class="btn-submit-search-navbar d-none", data-toggle-target="togglableElement" %>
         </form>
       </div>
