--- a/app/views/trees/edit.html.erb
+++ b/app/views/trees/edit.html.erb
@@ -1,17 +1,20 @@
-<h1>Edit flat</h1>
-<%= form_with model: @tree do |t| %>
-  <%= t.label :titre %>
-  <%= t.text_field :titre %>
-  <%= t.label :taille %>
-  <%= t.text_field :taille %>
-  <%= t.label :price %>
-  <%= t.text_field :price %>
-  <%= t.label :address %>
-  <%= t.text_field :address %>
-  <%= t.label :description %>
-  <%= t.text_field :description %>
-  <%= t.submit %>
-  <% if current_user == @tree.user%>
-    <%= link_to "Delete", tree_path(@tree), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
-  <%end %>
-<% end %>
+<div class="big-box-show-trees">
+  <div class="row d-flex justify-content-center mx-0">
+    <div class="col-md-4 mb-4">
+      <div class="div-edit-trees">
+        <h1 class="text-center">Edit your tree !</h1>
+        <%= simple_form_for [ @tree ] do |t| %>
+          <%= t.input :titre, input_html: {class: "text-list-new-movie"} %>
+          <%= t.input :taille, input_html: {class: "text-list-new-movie"} %>
+          <%= t.input :price, input_html: {class: "text-list-new-movie"} %>
+          <%= t.input :address, input_html: {class: "text-list-new-movie"} %>
+          <%= t.input :description, input_html: {class: "text-list-description"} %>
+          <%= t.submit class: "btn-update-tree" %>
+          <% if current_user == @tree.user%>
+            <%= link_to "Delete", tree_path(@tree), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn-edit-delete" %>
+          <%end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
