--- a/app/views/trees/show.html.erb
+++ b/app/views/trees/show.html.erb
@@ -1,25 +1,37 @@
 <div class="container big-box-show-trees">
-  <div class="card">
-    <div class="card-body">
-<% if @tree.image.nil? %>
+  <div class="row d-flex justify-content-center mx-0 box-trees">
+    <div class="col-md-4 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <% if @tree.image.nil? %>
             <% @tree.image = "https://www.lincroyable.fr/images/produits/65388%20(1).jpg" %>
-              <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
-              <% else %>
-              <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
-              <% end %>      <h2><%= @tree.titre %></h2>
-      <p><%= @tree.taille %></p>
-      <p><%= @tree.price %></p>
-      <p><i class="fa-solid fa-euro-sign"></i> <%= @tree.price %></p>
-    </div>
-    <div class="card-footer">
-      <%= link_to "Back to list", root_path, class: "btn btn-secondary btn-sm" %>
-        <% if current_user == @tree.user%>
-      <%= link_to "Edit", edit_tree_path(@tree), class: "btn btn-primary btn-sm" %>
-        <% @bookings.each do |booking| %>
-            <p>ça a été booké par: <%= booking.user.email %></p>
-            <%= link_to "Voir info du booking", booking_path(booking), class: "btn btn-secondary btn-sm" %>
+            <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
+          <% else %>
+            <img src="<%= @tree.image %>" class="card-img-top" alt="tree Image">
+          <% end %>
+          <h2><%= @tree.titre %></h2>
+          <div class="d-flex flex-column justify-content-start">
+            <p><%= @tree.address %></p>
+            <p><%= @tree.description %></p>
+            <div class="d-flex justify-content-between">
+              <p><%= @tree.taille %> cm</p>
+              <p><%= @tree.price %> <i class="fa-solid fa-euro-sign"></i> </p>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer">
+          <% if current_user == @tree.user%>
+
+            <% @bookings.each do |booking| %>
+              <p>Reserved by : <%= booking.user.email %></p>
+              <p><%= booking.start_date %> ... <%= booking.end_date %></p>
             <%end %>
           <% end %>
+        </div>
+        <% if current_user == @tree.user%>
+            <%= link_to "Edit", edit_tree_path(@tree), class: "btn-edit mx-auto" %>
+            <% end %>
+      </div>
     </div>
   </div>
 </div>
