--- a/app/views/trees/new.html.erb
+++ b/app/views/trees/new.html.erb
@@ -9,6 +9,7 @@
           <%= t.input :price, input_html: {class: "text-list-new-tree"} %>
           <%= t.input :address, input_html: {class: "text-list-new-tree"} %>
           <%= t.input :description, input_html: {class: "text-new-description"} %>
+          <%= t.input :image, input_html: {class: "text-list-new-tree"} %>
           <%= t.submit class: "btn-create-tree" %>
         <% end %>
       </div>
