--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,7 @@
             <div class="card-body">
               <h4 class="card-title"><strong><%= link_to tree.titre, tree_path(tree) %></strong></h4>
               <div class="d-flex flex-column justify-content-start">
+              <p>Arbre du User : <%= tree.user.name %></p>
                 <p><%= tree.address %></p>
                 <p><%= tree.description %></p>
                   <p><%= tree.taille %> cm</p>
@@ -33,7 +34,7 @@
               </div>
             </div>
             <% if current_user != tree.user%>
-              <%= link_to "Reserve", current_user.nil? ? new_user_session_path : new_tree_booking_path(tree), class: "btn-reserve-home mx-auto" %>
+              <%= link_to "Reserve", current_user.nil? ? new_user_session_path : new_tree_booking_path(tree_id: tree.id, start_date: params[:start_date], end_date: params[:end_date]), class: "btn-reserve-home mx-auto" %>
             <% end %>
             <div class="card-home-footer">
             </div>
